don't force no js

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -9,7 +9,7 @@
   <body>
     {{content | safe}}
     <script>
-     document.body.innerText = 'disable javascript to view this site'
+      //document.body.innerText = 'disable javascript to view this site'
     </script>
   </body>
 </html>
