--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -6,19 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
     <style>
-      body {
-          background: black;
-          color: white;
-      }
+     body {
+         background: black;
+         color: white;
+     }
      img {
          max-width: 100%;
      }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-31781311-1"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+
+     gtag('config', 'UA-31781311-1');
+    </script>
   </head>
   <body>
     {{content | safe}}
     <script>
-      //document.body.innerText = 'disable javascript to view this site'
+     //document.body.innerText = 'disable javascript to view this site'
     </script>
   </body>
 </html>
